<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEventActivity">

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:hint="@string/hint_current_location"
        app:layout_constraintBottom_toBottomOf="@+id/img_btn_get_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_btn_get_location"
        app:layout_constraintTop_toTopOf="@+id/img_btn_get_location" />

    <ImageButton
        android:id="@+id/img_btn_get_location"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="getLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/get_location"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_event_information"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_event_information"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_get_location" />

    <Button
        android:id="@+id/btn_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="pickDate"
        android:text="@string/msg_pick_date"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_event_information" />

    <Button
        android:id="@+id/btn_event_list_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="startEventListActivity"
        android:text="@string/msg_all_events"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="addEvent"
        android:text="@string/msg_add_event"
        app:layout_constraintEnd_toEndOf="@+id/btn_date_picker"
        app:layout_constraintStart_toStartOf="@+id/btn_date_picker"
        app:layout_constraintTop_toBottomOf="@+id/btn_date_picker" />

</androidx.constraintlayout.widget.ConstraintLayout>